product-service-v1/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-service
  labels:
    istio-injection: enabled
