product-service-v1/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-ds
spec:
  host: api.rte.cluster
  subsets:
  - name: version1
    labels:
      app: product
      version: "1.0"
